feat: update meta description/title
Google isn't using our current title
see if this changes things

Technically don't need &amp; as the ampersand is unambiguous.
Could go with '&'

--- a/CorpusSearch/ClientApp/public/index.html
+++ b/CorpusSearch/ClientApp/public/index.html
@@ -20,7 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Corpus Search</title>
+    <title>Manx Corpus Search</title>
+    <meta name="description" content="Search for words &amp; phrases within over 400 translated texts published from 1610 onwards. | Free &amp; Open Source">
   </head>
   <body>
     <noscript>
