content: improve description

--- a/CorpusSearch/ClientApp/public/index.html
+++ b/CorpusSearch/ClientApp/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Manx Corpus Search</title>
-    <meta name="description" content="Search for words &amp; phrases within over 400 translated texts published from 1610 onwards. | Free &amp; Open Source">
+    <meta name="description" content="Search for words &amp; phrases within over 400 translated texts, from 1610 to the present era. Free &amp; Open Source">
   </head>
   <body>
     <noscript>
